@@ -133,6 +133,8 @@ protected:
   virtual int operator()(CTCLInterpreter& interp,
 			 STD(vector)<CTCLObject>& objv);
 
+  static int id();		// Allocate a fit id.
+
   // Private subcommand executors.. these are named
   // after their commands.
 
